# learnOpenGL

./: .gitignore  README.md
HelloTriangle/Triangle/: Triangle
HelloTriangle/Triangle.STask1/: CMakeLists.txt  Triangle
HelloTriangle/Triangle.STask1/src/: glad.c  main.cpp
HelloTriangle/Triangle.STask2/: CMakeLists.txt  Triangle
HelloTriangle/Triangle.STask2/src/: main.cpp
HelloTriangle/Triangle.STask3/: CMakeLists.txt  Triangle
HelloTriangle/Triangle.STask3/src/: main.cpp
HelloTriangle/Triangle/src/: main.cpp
Shaders/ShaderClass/: CMakeLists.txt
Shaders/ShaderClass/shaders/: shader.fs
Shaders/ShaderClass/src/: main.cpp  shader.h
Shaders/Uniforms/: CMakeLists.txt  Uniforms
Shaders/Uniforms/src/: main.cpp
Shaders/UpdateColorVertices/: CMakeLists.txt  UCvertices
Shaders/UpdateColorVertices/src/: .main.cpp.swp  main.cpp
Shaders/task1/: CMakeLists.txt
Shaders/task1/shaders/: shader.vs
Shaders/task1/src/: shader.cpp
Shaders/task2/: .ycm_extra_conf.py  CMakeLists.txt
Shaders/task2/shaders/: shader.vs
Shaders/task2/src/: main.cpp  shader.cpp  shader.h
Shaders/task3/: CMakeLists.txt
Shaders/task3/shaders/: shader.fs  shader.vs
Shaders/task3/src/: main.cpp
Textures/TextureTriangle/: CMakeLists.txt
Textures/TextureTriangle/src/: .main.cpp.swp  main.cpp  stb_image.h
Textures/TextureTriangle/src/shaders/: shader.fs  shader.vs
